# src/routes/index.js
@@ -10,6 +10,7 @@ const categoryRoutes = require('./categories');
 const sutraRoutes = require('./sutras');
 const { search } = require('../controllers/searchController');
 const favoriteRoutes = require('./favorites');
+const calendarRoutes = require('./calendar');
 
 const router = Router();
 
@@ -21,6 +22,7 @@ router.post('/auth/register', register);
 router.post('/auth/login', login);
 router.get('/search', search);
 router.use('/favorites', favoriteRoutes);
+router.use('/calendar', calendarRoutes);
 router.use('/monks', monkRoutes);
 router.use('/dharma-talks', dharmaTalkRoutes);
 router.use('/categories', categoryRoutes);
